# AI_document_intelligence

./: pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  chat.py  rfp.py
backend/app/core/: config.py  security.py
backend/app/db/: app.db  database.py
backend/app/services/: pdf_parser.py
frontend/src/: App.jsx
