[project]
name = "rfp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.1.2",
    "chromadb>=1.5.9",
    "email-validator>=2.2.0",
    "fastapi>=0.136.1",
    "groq>=1.2.0",
    "httpx>=0.27.0",
    "langchain-text-splitters>=1.1.2",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pyjwt>=2.9.0",
    "pymupdf>=1.27.2.3",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "uvicorn>=0.47.0",
    "sqlalchemy>=2.0.51",
    "easyocr>=1.7.2",
]
